[gd_scene load_steps=5 format=3 uid="uid://i6ia8dt3vtj2"]

[ext_resource type="Script" path="res://inventory/inventory_slot.gd" id="1_e2gwg"]
[ext_resource type="Texture2D" uid="uid://bvp7u3rqputv0" path="res://art/Items/potion.png" id="2_jddes"]
[ext_resource type="FontFile" uid="uid://bqnjxpucg2re4" path="res://art/Font/font1.ttf" id="3_jcccv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_386cs"]

[node name="InventorySlots2" type="Control"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -288.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2gwg")

[node name="OutBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.368627, 0, 0.368627, 0.443137)

[node name="InnerBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -13.0
offset_right = 13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.47451)

[node name="Sprite2D" type="Sprite2D" parent="InnerBorder"]
position = Vector2(13, 11)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_jddes")

[node name="Label" type="Label" parent="InnerBorder"]
layout_mode = 0
offset_left = 16.0
offset_top = 12.0
offset_right = 56.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("3_jcccv")
theme_override_font_sizes/font_size = 16
text = "1"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_386cs")

[node name="Detail" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -24.0
offset_right = 40.0
offset_bottom = -1.0
color = Color(0.368627, 0, 0.368627, 0.443137)

[node name="Name" type="Label" parent="Detail"]
layout_mode = 1
offset_left = 2.0
offset_top = 1.0
offset_right = 42.0
offset_bottom = 24.0
scale = Vector2(0.386553, 0.386553)
theme_override_fonts/font = ExtResource("3_jcccv")
theme_override_font_sizes/font_size = 16
text = "Name"

[node name="Type" type="Label" parent="Detail"]
layout_mode = 0
offset_left = 2.0
offset_top = 8.0
offset_right = 42.0
offset_bottom = 31.0
scale = Vector2(0.349538, 0.349538)
theme_override_fonts/font = ExtResource("3_jcccv")
text = "Type"

[node name="Effect" type="Label" parent="Detail"]
layout_mode = 0
offset_left = 2.0
offset_top = 16.0
offset_right = 49.0
offset_bottom = 39.0
scale = Vector2(0.233335, 0.233335)
theme_override_fonts/font = ExtResource("3_jcccv")
text = "effect"

[node name="Usage" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
offset_right = -3.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.368627, 0, 0.368627, 0.443137)

[node name="Button" type="Button" parent="Usage"]
layout_mode = 0
offset_left = 2.00001
offset_top = 1.0
offset_right = 34.0
offset_bottom = 24.0
scale = Vector2(0.728353, 0.457316)
theme_override_fonts/font = ExtResource("3_jcccv")
text = "Use"

[node name="Button2" type="Button" parent="Usage"]
layout_mode = 0
offset_left = 2.0
offset_top = 13.0
offset_right = 42.0
offset_bottom = 36.0
scale = Vector2(0.582844, 0.438979)
theme_override_fonts/font = ExtResource("3_jcccv")
text = "Drop"

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
